--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "php": ">=8.1"
+        "php": ">=8.1",
+        "symfony/dotenv": "^6.1"
     },
     "autoload": {
         "psr-4": {
