--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,13 @@
 {
     "require": {
         "php": ">=8.1",
-        "symfony/dotenv": "^6.1"
+        "symfony/dotenv": "^6.1",
+        "slim/slim": "4.10.0",
+        "nyholm/psr7": "^1.5",
+        "nyholm/psr7-server": "^1.0",
+        "guzzlehttp/psr7": "^2",
+        "laminas/laminas-diactoros": "^2.17",
+        "php-di/php-di": "^6.4"
     },
     "autoload": {
         "psr-4": {
