--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "nyholm/psr7-server": "^1.0",
         "guzzlehttp/psr7": "^2",
         "laminas/laminas-diactoros": "^2.17",
-        "php-di/php-di": "^6.4"
+        "php-di/php-di": "^6.4",
+        "monolog/monolog": "^3.2"
     },
     "autoload": {
         "psr-4": {
