Logger implementation & configuration.

--- a/.env.dist
+++ b/.env.dist
@@ -1,1 +1,7 @@
-ENVIRONMENT=dev
+ENVIRONMENT=DEV
+
+# Logger
+LOGGER_DIRECTORY=/var/www/work-directory/logs
+LOGGER_FILE_ROTATION=true
+LOGGER_FILE_NAME=app.log
+LOGGER_APP_NAME=Server-Application
