--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "guzzlehttp/psr7": "^2",
         "laminas/laminas-diactoros": "^2.17",
         "php-di/php-di": "^6.4",
-        "monolog/monolog": "^3.2"
+        "monolog/monolog": "^3.2",
+        "slim/twig-view": "^3.3"
     },
     "autoload": {
         "psr-4": {
