Twig package configuration.

--- a/.env.dist
+++ b/.env.dist
@@ -3,5 +3,8 @@ ENVIRONMENT=DEV
 # Logger
 LOGGER_DIRECTORY=/var/www/work-directory/logs
 LOGGER_FILE_ROTATION=true
-LOGGER_FILE_NAME=app.log
+LOGGER_FILE_NAME=app
 LOGGER_APP_NAME=Server-Application
+
+# Views
+TEMPLATE_CACHE_DIRECTORY=/var/www/work-directory/cache
