--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,11 @@
 {
+    "authors": [
+        {
+            "name": "Jorge García",
+            "email": "kernelpanic0x000007C4@protonmail.com",
+            "role": "Developer"
+        }
+    ],
     "require": {
         "php": ">=8.1",
         "symfony/dotenv": "^6.1",
@@ -22,6 +29,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.7"
     }
 }
